--- a/DockingAdminPanel/Views/Patients/Index.cshtml
+++ b/DockingAdminPanel/Views/Patients/Index.cshtml
@@ -391,7 +391,7 @@
 
                                                     <td>
                                                 ${sex}</td>
-                                <td>     ${token}100</td>
+                                <td>     ${token}</td>
                         </tr>
                     </tbody>
                 </table>
@@ -418,17 +418,17 @@
                     </div>
                     <div class="">
                         <div class="">
-                            <table>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            SubTotal: <br>
-                                            Tax(15%): <br>
+                                    <table>
+                                    <tbody>
+                                        <tr style="display: flex; justify-content: end;">
+                                            <td>
+                                                SubTotal: <br>
+                                                Tax(15%): <br>
                                                 Total Amount:${fee}
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                         </div>
                     </div>
                 </div>
