--- a/DockingAdminPanel/Views/Patients/LabIndex.cshtml
+++ b/DockingAdminPanel/Views/Patients/LabIndex.cshtml
@@ -24,6 +24,7 @@
             <table id="myTable" class="display">
                 <thead>
                     <tr>
+                        <th>Mrno#</th>
                         <th>Status</th>
                         <th>
                             Token Number
@@ -57,6 +58,7 @@
                     @foreach (var item in Model)
                     {
                         <tr data-fullname="@item.FullName" data-patientid="@item.Id" data-age="@item.Age" data-sex="@item.Sex" data-fee="@item.Fee" data-token="@item.TokenNumber" data-test="@item.patientTest">
+                           <td>@item.MedicalRecordNumber</td>
                             <td style=@(item.PaymentStatus==true?"background-color:green":"background-color:red")>
                                 @(item.PaymentStatus == true ? "Paid" : "UnPaid")
                             </td>
