--- a/DockingAdminPanel/Views/LabCategories/Create.cshtml
+++ b/DockingAdminPanel/Views/LabCategories/Create.cshtml
@@ -6,26 +6,33 @@
 
 <h1>Create</h1>
 
-<h4>LabCategory</h4>
+<h4>Lab Category</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-floating">
+                <input asp-for="Name" class="form-control" placeholder="Name" />
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
            
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-3">
+               <button type="submit" class="btn btn-primary"><i class="fa-solid fa-circle-plus"></i> Create</button>
+                <a asp-action="Index" class="btn btn-info"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    
 </div>
 
+<style>
+    .btn-info:hover {
+        background: transparent !important;
+    color: #25cff2 !important;
+    }
+</style>
