--- a/DockingAdminPanel/Views/LabCategories/Delete.cshtml
+++ b/DockingAdminPanel/Views/LabCategories/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>LabItems</h4>
+    <h4>Lab Items</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,7 +20,21 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button type="submit" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i> Delete</button> |
+        <a asp-action="Index" class="btn btn-info"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
     </form>
 </div>
+
+
+<style>
+    .btn-danger:hover {
+        background: transparent !important;
+    color: #b02a37 !important;
+    }
+
+    .btn-info:hover {
+        background: transparent !important;
+        color: #25cff2 !important;
+    }
+
+</style>
