--- a/DockingAdminPanel/Views/LabItems/Delete.cshtml
+++ b/DockingAdminPanel/Views/LabItems/Delete.cshtml
@@ -8,9 +8,9 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>LabItems</h4>
+    <h4>Lab Items</h4>
     <hr />
-    <dl class="row">
+    <!-- <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TestName)
         </dt>
@@ -35,11 +35,53 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NormalValue)
         </dd>
-    </dl>
-    
-    <form asp-action="Delete">
+    </dl> -->
+
+
+<div class="row">
+    <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.TestName)</th>
+        <th>@Html.DisplayNameFor(model => model.Price)</th>
+        <th> @Html.DisplayNameFor(model => model.Units)</th>
+        <th>@Html.DisplayNameFor(model => model.NormalValue)</th>
+        <th></th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr>
+            <td>@Html.DisplayFor(model => model.TestName)</td>
+        <td>@Html.DisplayFor(model => model.Price)</td>
+        <td>@Html.DisplayFor(model => model.Units)</td>
+        <td> @Html.DisplayFor(model => model.NormalValue)</td>
+        <td class="w-25 text-end">
+            <form asp-action="Delete" class="mt-3">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button type="submit" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i> Delete</button> |
+        <a asp-action="Index" class="btn btn-info"><i class="fa-solid fa-circle-arrow-left"></i> Back to List</a>
     </form>
+        
+        </td>
+        </tr>
+    </tbody>
+    </table>
 </div>
+    
+   
+</div>
+
+
+<style>
+    .btn-danger:hover {
+        background: transparent !important;
+    color: #b02a37 !important;
+    }
+
+    .btn-info:hover {
+        background: transparent !important;
+        color: #25cff2 !important;
+    }
+
+</style>
